--- a/scss/main.css
+++ b/scss/main.css
@@ -1,6 +1,72 @@
-.header {
-  font-size: 18px;
+@charset "UTF-8";
+body .header {
+  width: 1920px;
+  height: 261px;
+  padding: 50px 240px 50px 240px;
+  background-color: rgb(51, 54, 53);
 }
-.header h1 {
-  font-size: 22px;
+body .header__top {
+  width: 1440px;
+  height: 60px;
+  display: flex;
+  justify-content: space-between;
+}
+body .header__logo__adress {
+  width: 630px;
+  height: 60px;
+  display: flex; /* Устанавливаем флекс-контейнер */
+  align-items: center; /* Выравниваем элементы по вертикали (по центру) */
+  gap: 10px; /* Добавляем расстояние между логотипом и адресом */
+}
+body .header__logo {
+  width: 289px;
+  height: 60px;
+}
+body .header .logo {
+  display: flex;
+  gap: 20px;
+  align-items: center;
+}
+body .header .logo__icon {
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  background: #2cb4fe;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #f5f7fa;
+  font-family: "Raleway", sans-serif;
+  font-size: 24px;
+  font-weight: 900;
+}
+body .header .logo__text {
+  font-family: "Raleway", sans-serif;
+  color: #f5f7fa;
+}
+body .header .logo__text--primary {
+  font-size: 24px;
+  font-weight: 900;
+  line-height: 35.22px;
+  width: 209px;
+  height: 32px;
+}
+body .header .logo__text--secondary {
+  font-size: 17px;
+  font-weight: 400;
+  line-height: 19.96px;
+  width: 206px;
+  height: 20px;
+}
+body .header__adress {
+  width: 301px;
+  height: 60px;
+}
+body .header .adress {
+  font-family: "Mplus 1p", sans-serif;
+  font-size: 15px;
+  font-weight: 400;
+  line-height: 22.28px;
+  text-align: left;
+  color: #FFFFFF;
 }/*# sourceMappingURL=main.css.map */
