--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,7 +1,84 @@
-.header {
-  font-size: 18px;
+body {
+  .header {
+    width: 1920px;
+    height: 261px;
+    padding: 50px 240px 50px 240px;
+    background-color: rgb(51, 54, 53);
 
-  h1 {
-    font-size: 22px;
+    &__top {
+      width: 1440px;
+      height: 60px;
+      display: flex;
+      justify-content: space-between;
+    }
+
+    &__logo__adress {
+      width: 630px;
+      height: 60px;
+      display: flex; /* Устанавливаем флекс-контейнер */
+      align-items: center; /* Выравниваем элементы по вертикали (по центру) */
+      gap: 10px; /* Добавляем расстояние между логотипом и адресом */
+    }
+
+    &__logo {
+      width: 289px;
+      height: 60px;
+    }
+
+    .logo {
+      display: flex;
+      gap: 20px;
+      align-items: center;
+
+      &__icon {
+        width: 60px;
+        height: 60px;
+        border-radius: 50%; // Делает элемент кругом
+        background: #2cb4fe;
+        display: flex; // Устанавливаем flex для центрирования текста
+        align-items: center; // Центрирование текста по вертикали
+        justify-content: center; // Центрирование текста по горизонтали
+        color: #f5f7fa; // Цвет текста
+        font-family: "Raleway", sans-serif; // Шрифт текста
+        font-size: 24px; // Размер текста
+        font-weight: 900; // Жирность текста
+      }
+      &__text {
+        font-family: "Raleway", sans-serif;
+        color: #f5f7fa;
+
+        &--primary {
+          font-size: 24px;
+          font-weight: 900;
+          line-height: 35.22px;
+          width: 209px;
+          height: 32px;
+        }
+
+        &--secondary {
+          font-size: 17px;
+          font-weight: 400;
+          line-height: 19.96px;
+          width: 206px;
+          height: 20px;
+        }
+      }
+    }
+
+    &__adress {
+      width: 301px;
+      height: 60px;
+      
+    }
+
+    .adress{
+      font-family: 'Mplus 1p', sans-serif;
+      font-size: 15px;
+      font-weight: 400;
+      line-height: 22.28px;
+      text-align: left;
+      color: #FFFFFF;
+      
+    }
   }
 }
