--- a/main.css
+++ b/main.css
@@ -78,14 +78,15 @@ a {
   text-decoration: none;
 }
 
-ul, ol {
+ul,
+ol {
   list-style: none;
   margin: 0;
   padding: 0;
 }
 
 :root {
-  --brand-color: #2CB4FE;
+  --brand-color: #2cb4fe;
 }
 
 body {
@@ -139,7 +140,7 @@ body {
   gap: 20px;
 }
 .header .content .header-row .logo_adress .logo .icon {
-  color: #F5F7FA;
+  color: #f5f7fa;
   font-family: Raleway;
   font-size: 28px;
   font-style: normal;
@@ -165,7 +166,7 @@ body {
 }
 .header .content .header-row .logo_adress .logo h1 {
   max-width: 209px;
-  color: #FFF;
+  color: #fff;
   font-family: Raleway;
   font-size: 30px;
   font-style: normal;
@@ -180,7 +181,7 @@ body {
   }
 }
 .header .content .header-row .logo_adress .logo h1 span {
-  color: #FFF;
+  color: #fff;
   font-family: Raleway;
   font-size: 17px;
   font-style: normal;
@@ -194,7 +195,7 @@ body {
 }
 .header .content .header-row .logo_adress .separator {
   opacity: 0.5;
-  background-color: #FFF;
+  background-color: #fff;
   flex-shrink: 0;
   width: 1px;
   height: 60px;
@@ -205,7 +206,7 @@ body {
   }
 }
 .header .content .header-row .logo_adress .adress {
-  color: #FFF;
+  color: #fff;
   font-family: "Mplus";
   font-size: 15px;
   font-style: normal;
@@ -240,7 +241,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  background: #0B1B23;
+  background: #0b1b23;
   width: 151px;
   border-radius: 5px;
   padding: 10px;
@@ -296,14 +297,80 @@ body {
   height: 2px;
   border-radius: 2px;
   flex-shrink: 0;
-  background: #F5F7FA;
+  background: #f5f7fa;
 }
 .header .content .burger-btn .line:last-child {
   width: 28px;
   height: 2px;
   border-radius: 2px;
   flex-shrink: 0;
-  background: #F5F7FA;
+  background: #f5f7fa;
+}
+.header .content .nav {
+  display: flex;
+  border-radius: 5px;
+  background: #0b1b23;
+  padding: 0 20px;
+}
+.header .content .nav ul {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  width: 100%;
+}
+.header .content .nav ul li.dropdown {
+  position: relative;
+}
+.header .content .nav ul li.dropdown:hover .dropdown-link:after {
+  transform: rotate(180deg);
+}
+.header .content .nav ul li.dropdown:hover .submenu {
+  display: flex;
+}
+.header .content .nav ul li.dropdown .dropdown-link {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+.header .content .nav ul li.dropdown .dropdown-link:after {
+  content: url("data:image/svg+xml,%3Csvg width='24' height='24' viewBox='0 0 24 24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M5.29289 8.29289C5.68342 7.90237 6.31658 7.90237 6.70711 8.29289L12 13.5858L17.2929 8.29289C17.6834 7.90237 18.3166 7.90237 18.7071 8.29289C19.0976 8.68342 19.0976 9.31658 18.7071 9.70711L12.7071 15.7071C12.3166 16.0976 11.6834 16.0976 11.2929 15.7071L5.29289 9.70711C4.90237 9.31658 4.90237 8.68342 5.29289 8.29289Z' fill='%237095AA'/%3E%3C/svg%3E%0A");
+  display: flex;
+  align-items: center;
+  transition: 0.5s ease;
+}
+.header .content .nav ul li.dropdown .submenu {
+  padding: 20px;
+  position: absolute;
+  left: 0;
+  top: 100%;
+  background: #0f242f;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 10px;
+  width: calc(100% + 100px);
+  display: none;
+}
+.header .content .nav ul li.dropdown .submenu a {
+  color: #fafafb;
+  padding: 0;
+  left: 10px;
+}
+.header .content .nav ul li a {
+  display: flex;
+  padding: 20px;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  color: #fff;
+  font-family: "Mplus";
+  font-size: 15px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  text-transform: uppercase;
+  position: relative;
+  overflow: hidden;
+  transition: 0.5s ease;
 }
 .header__top {
   width: 1440px;
