--- a/main.scss
+++ b/main.scss
@@ -86,13 +86,14 @@
 a {
   text-decoration: none;
 }
-ul , ol {
+ul,
+ol {
   list-style: none;
   margin: 0;
   padding: 0;
 }
 :root {
-  --brand-color: #2CB4FE;
+  --brand-color: #2cb4fe;
 }
 
 body {
@@ -122,7 +123,7 @@ body {
   @media (max-width: 1024px) {
     padding: 20px 0;
   }
-  .content{
+  .content {
     display: flex;
     flex-direction: column;
     gap: 37px;
@@ -131,22 +132,22 @@ body {
       align-items: center;
       justify-content: space-between;
       gap: 15px;
-      .logo_adress{
+      .logo_adress {
         display: flex;
         align-items: center;
         gap: 20px;
-        .logo{
+        .logo {
           display: flex;
           align-items: center;
           gap: 20px;
           .icon {
-            color: #F5F7FA;
+            color: #f5f7fa;
             font-family: Raleway;
             font-size: 28px;
             font-style: normal;
             font-weight: 900;
             line-height: 32.87px;
-            text-align: left;            
+            text-align: left;
             display: flex;
             width: 60px;
             height: 60px;
@@ -162,9 +163,9 @@ body {
               font-size: 23px;
             }
           }
-          h1{
+          h1 {
             max-width: 209px;
-            color: #FFF;
+            color: #fff;
             font-family: Raleway;
             font-size: 30px;
             font-style: normal;
@@ -172,84 +173,84 @@ body {
             line-height: normal;
             display: flex;
             flex-direction: column;
-            @media (max-width:1024px){
-              font-size: 24px; 
+            @media (max-width: 1024px) {
+              font-size: 24px;
             }
-            span{
-              color: #FFF;
+            span {
+              color: #fff;
               font-family: Raleway;
               font-size: 17px;
               font-style: normal;
               font-weight: 400;
               line-height: normal;
-              @media (max-width:1024px){
-                font-size: 14px; 
+              @media (max-width: 1024px) {
+                font-size: 14px;
               }
             }
           }
         }
-        .separator{
+        .separator {
           opacity: 0.5;
-          background-color: #FFF; 
+          background-color: #fff;
           flex-shrink: 0;
           width: 1px;
           height: 60px;
-          @media (max-width:1024px){
-            display: none; 
+          @media (max-width: 1024px) {
+            display: none;
           }
         }
         .adress {
-          color: #FFF;
+          color: #fff;
           font-family: "Mplus";
           font-size: 15px;
           font-style: normal;
           font-weight: 400;
           line-height: normal;
           max-width: 301px;
-          @media (max-width:1024px){
-            display: none; 
+          @media (max-width: 1024px) {
+            display: none;
           }
         }
       }
-      .phone-select{
+      .phone-select {
         max-width: 197px;
         font-family: Mplus;
         font-size: 16px;
         font-weight: 400;
         line-height: 30px;
         color: #ffffff;
-        .phone-select-wrapper{
-          display: none;         
+        .phone-select-wrapper {
+          display: none;
         }
-        @media (max-width:1024px){
-          display: none; 
+        @media (max-width: 1024px) {
+          display: none;
         }
       }
-      .callback{
+      .callback {
         all: unset;
         box-sizing: border-box;
         display: flex;
         align-items: center;
         justify-content: center;
-        background: #0B1B23;
+        background: #0b1b23;
         width: 151px;
         border-radius: 5px;
-        padding: 10px ;
+        padding: 10px;
         font-family: "Mplus";
         font-size: 12px;
         font-style: normal;
         font-weight: 700;
         height: 40px;
         color: #ffffff;
-        @media (max-width:1024px){
-          display: none; 
+        @media (max-width: 1024px) {
+          display: none;
         }
       }
-      .contacts-socials{
+      .contacts-socials {
         display: flex;
         gap: 20px;
         align-items: center;
-        .social-link{
+        .social-link {
           align-items: center;
           justify-content: center;
           width: 40px;
@@ -258,13 +259,13 @@ body {
           border-radius: 5px;
           margin: 0 auto;
           background: #0b1b23;
-          @media (max-width:1024px){
-            display: none; 
+          @media (max-width: 1024px) {
+            display: none;
           }
         }
       }
     }
-    .burger-btn{
+    .burger-btn {
       width: 40px;
       height: 40px;
       align-items: flex-end;
@@ -273,31 +274,99 @@ body {
       gap: 10px;
       cursor: pointer;
       display: none;
-      @media (max-width:1024px) {
+      @media (max-width: 1024px) {
         display: flex;
       }
-      .line{
-        &:first-child{
+      .line {
+        &:first-child {
           width: 100%;
           height: 2px;
           border-radius: 2px;
           flex-shrink: 0;
-          background: #F5F7FA;
+          background: #f5f7fa;
         }
-        &:last-child{
+        &:last-child {
           width: 28px;
           height: 2px;
           border-radius: 2px;
           flex-shrink: 0;
-          background: #F5F7FA;
+          background: #f5f7fa;
+        }
+      }
+    }
+      .nav {
+        display: flex;
+        border-radius: 5px;
+        background: #0b1b23;
+        padding: 0 20px;
+        ul {
+          display: flex;
+          align-items: center;
+          justify-content: space-around;
+          width: 100%;
+        li {
+          &.dropdown {
+            position: relative;
+            &:hover{
+              .dropdown-link {
+                &:after {
+                  transform: rotate(180deg);
+                }
+              }
+              .submenu {
+                display: flex;
+              }
+            }
+            .dropdown-link {
+              display: flex;
+              align-items: center;
+              gap: 10px;
+              &:after {
+                content: url("data:image/svg+xml,%3Csvg width='24' height='24' viewBox='0 0 24 24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M5.29289 8.29289C5.68342 7.90237 6.31658 7.90237 6.70711 8.29289L12 13.5858L17.2929 8.29289C17.6834 7.90237 18.3166 7.90237 18.7071 8.29289C19.0976 8.68342 19.0976 9.31658 18.7071 9.70711L12.7071 15.7071C12.3166 16.0976 11.6834 16.0976 11.2929 15.7071L5.29289 9.70711C4.90237 9.31658 4.90237 8.68342 5.29289 8.29289Z' fill='%237095AA'/%3E%3C/svg%3E%0A");
+                display: flex;
+                align-items: center;
+                transition: 0.5s ease;
+              }
+            }
+            .submenu {
+              padding: 20px;
+              position: absolute;
+              left: 0; 
+              top: 100%;
+              background: #0f242f;
+              flex-direction: column;
+              align-items: flex-start;
+              gap: 10px;
+              width: calc(100% + 100px);              
+              display: none;           
+              a {
+                color: #fafafb;
+                padding: 0;
+                left: 10px; 
+              }
+            }
+          }
+          a {
+            display: flex;
+            padding: 20px;
+            justify-content: center;
+            align-items: center;
+            gap: 10px;
+            color: #fff;
+            font-family: "Mplus";
+            font-size: 15px;
+            font-style: normal;
+            font-weight: 500;
+            line-height: normal;
+            text-transform: uppercase;
+            position: relative;
+            overflow: hidden;
+            transition: 0.5s ease;
+          }
         }
       }
     }
   }
-
-
-
-
 
   &__top {
     width: 1440px;
