--- a/main.scss
+++ b/main.scss
@@ -213,14 +213,49 @@ body {
         }
       }
       .phone-select {
+        position: relative;
         max-width: 197px;
         font-family: Mplus;
         font-size: 16px;
         font-weight: 400;
         line-height: 30px;
         color: #ffffff;
+        &:hover {
+          .phone-select-header {
+            &:after {
+              transform: rotate(180deg);
+            }
+          }
+          .phone-select-wrapper {
+            display: flex;
+          }
+        }
+        .phone-select-header {
+          display: flex;
+          align-items: center;
+          gap: 10px;
+          &:after {
+            content: url("data:image/svg+xml,%3Csvg width='24' height='24' viewBox='0 0 24 24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M5.29289 8.29289C5.68342 7.90237 6.31658 7.90237 6.70711 8.29289L12 13.5858L17.2929 8.29289C17.6834 7.90237 18.3166 7.90237 18.7071 8.29289C19.0976 8.68342 19.0976 9.31658 18.7071 9.70711L12.7071 15.7071C12.3166 16.0976 11.6834 16.0976 11.2929 15.7071L5.29289 9.70711C4.90237 9.31658 4.90237 8.68342 5.29289 8.29289Z' fill='%23FFFFFF'/%3E%3C/svg%3E%0A");
+            display: flex;
+            width: 24px;
+            height: 24px;
+            transition: 0.5s ease;
+          }
+        }
         .phone-select-wrapper {
           display: none;
+          // display: flex;
+          position: absolute;
+          left: 0;
+          top: 100%;
+          flex-direction: column;
+          align-items: flex-start;
+          width: calc(100% + 100px);
+          a {
+            color: #fafafb;
+            padding: 0;
+            left: 10px;
+          }
         }
         @media (max-width: 1024px) {
           display: none;
@@ -230,6 +265,7 @@ body {
         all: unset;
         box-sizing: border-box;
         display: flex;
+        flex-shrink: 0;
         align-items: center;
         justify-content: center;
         background: #0b1b23;
@@ -294,20 +330,24 @@ body {
         }
       }
     }
-      .nav {
+    .nav {
+      display: flex;
+      border-radius: 5px;
+      background: #0b1b23;
+      padding: 0 20px;
+      align-items: center;
+      @media (max-width: 1024px) {
+        display: none;
+      }
+      .nav-list {
         display: flex;
-        border-radius: 5px;
-        background: #0b1b23;
-        padding: 0 20px;
-        ul {
-          display: flex;
-          align-items: center;
-          justify-content: space-around;
-          width: 100%;
+        align-items: center;
+        justify-content: space-around;
+        width: 100%;       
         li {
           &.dropdown {
             position: relative;
-            &:hover{
+            &:hover {
               .dropdown-link {
                 &:after {
                   transform: rotate(180deg);
@@ -324,26 +364,41 @@ body {
               &:after {
                 content: url("data:image/svg+xml,%3Csvg width='24' height='24' viewBox='0 0 24 24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M5.29289 8.29289C5.68342 7.90237 6.31658 7.90237 6.70711 8.29289L12 13.5858L17.2929 8.29289C17.6834 7.90237 18.3166 7.90237 18.7071 8.29289C19.0976 8.68342 19.0976 9.31658 18.7071 9.70711L12.7071 15.7071C12.3166 16.0976 11.6834 16.0976 11.2929 15.7071L5.29289 9.70711C4.90237 9.31658 4.90237 8.68342 5.29289 8.29289Z' fill='%237095AA'/%3E%3C/svg%3E%0A");
                 display: flex;
-                align-items: center;
+                width: 24px;
+                height: 24px;
                 transition: 0.5s ease;
+              }
+              &:before {
+                content: none;
+              }
+              &:hover {
+                color: #f5f7fa;               
               }
             }
             .submenu {
               padding: 20px;
               position: absolute;
-              left: 0; 
+              left: 0;
               top: 100%;
               background: #0f242f;
               flex-direction: column;
               align-items: flex-start;
-              gap: 10px;
-              width: calc(100% + 100px);              
-              display: none;           
+              gap: 20px;
+              width: calc(100% + 100px);
+              display: none;
+              z-index: 2;
               a {
                 color: #fafafb;
                 padding: 0;
-                left: 10px; 
+                left: 10px;
+                &:before {
+                  content: none;
+                }
+                &:hover {
+                  color: var(--brand-color);
+                }
               }
+              
             }
           }
           a {
@@ -362,6 +417,55 @@ body {
             position: relative;
             overflow: hidden;
             transition: 0.5s ease;
+            &:hover {
+              color: var(--brand-color);
+              &::before {
+                bottom: -16px;
+              }
+            }
+            &::before {
+              content: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='119' height='19' viewBox='0 0 119 19' fill='none'%3E%3Cellipse cx='59.5' cy='9.5' rx='59.5' ry='9.5' fill='%232CB4FE'/%3E%3C/svg%3E");
+              width: 119px;
+              height: 19px;
+              position: absolute;
+              bottom: -30px;
+              left: 50%;
+              transform: translateX(-50%);
+              z-index: 1;
+              transition: .3s ease;
+            }
+          }
+        }
+      }
+      .burger-btn {
+        width: 40px;
+        height: 40px;
+        align-items: flex-end;
+        flex-direction: column;
+        justify-content: center;
+        gap: 10px;
+        cursor: pointer;
+        display: flex;
+        
+        .line {
+          &:first-child {
+            width: 100%;
+            height: 2px;
+            border-radius: 2px;
+            flex-shrink: 0;
+            background: #f5f7fa;
+          }
+          &:last-child {
+            width: 28px;
+            height: 2px;
+            border-radius: 2px;
+            flex-shrink: 0;
+            background: #f5f7fa;
+          }
+        }
+        &:hover {
+          .line{
+          background:var(--brand-color);
           }
         }
       }
@@ -478,5 +582,145 @@ body {
       color: #f5f7fa;
       border-radius: 5px;
     }
+  }
+}
+
+.main {
+  padding: 0 50px;
+  @media (max-width: 1024px) {
+    padding: 20px 0;
+  }
+  .slider {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    position: relative;
+    .frame {
+      display: flex;
+      flex-direction: column;
+      gap: 100px;
+      .text {
+        display: flex;
+        flex-direction: column;
+        max-width: 971px;
+        max-height: 795px;
+        gap: 50px;
+        p {
+          &:first-child {
+            font-family: "Raleway";
+            font-style: normal;
+            font-weight: 400;
+            font-size: 80px;
+            line-height: 94px;
+            color: #ffffff;
+            flex-grow: 0;
+          }
+          &:last-child {
+            font-family: "Raleway";
+            font-style: normal;
+            text-align: left;
+            font-weight: 400;
+            font-size: 40px;
+            line-height: 47px;
+            color: #ffffff;
+            flex-grow: 0;
+          }
+        }
+      }
+      .ripple {
+        max-width: 232px;
+        display: flex;
+        padding: 20px 30px;
+        justify-content: center;
+        align-items: center;
+        border-radius: 5px;
+        background: var(--brand-color);
+        position: relative;
+        overflow: hidden;
+        cursor: pointer;
+        &:hover {
+          span {
+            color: var(--brand-color);
+          }
+          &::before {
+            animation: scaleCircle 1s ease forwards;
+          }
+        }
+        &:not(:hover) {
+          span {
+            transition: 0.3s ease 0.5s;
+          }
+          &::before {
+            animation: scaleDownCircle 1s ease forwards;
+          }
+        }
+        span {
+          color: #fff;
+          font-family: "Mplus";
+          font-size: 20px;
+          font-style: normal;
+          font-weight: 500;
+          line-height: normal;
+          text-transform: uppercase;
+          position: relative;
+          z-index: 2;
+        }
+        &::before {
+          content: "";
+          width: 5px;
+          height: 5px;
+          border-radius: 500px;
+          background: #ffffff;
+          position: absolute;
+          left: 50%;
+          transform: translateX(-50%);
+          bottom: -60px;
+          transition: 1s ease forwards;
+          z-index: 1;
+        }
+      }
+    }
+    .scroll-bar {
+      display: flex;
+      flex-direction: row;
+      position: absolute;
+      gap: 20px;
+      position: relative;
+      bottom: 0;
+      right: 0;
+      max-height: 64px;
+      p {
+        width: 39px;
+        height: 29px;
+        font-family: "Raleway";
+        font-style: normal;
+        font-weight: 400;
+        font-size: 25px;
+        line-height: 29px;
+        text-transform: uppercase;
+        color: #ffffff;
+      }
+    }
+  }
+}
+
+@keyframes scaleCircle {
+  from {
+    width: 5px;
+    height: 5px;
+  }
+  to {
+    width: 300px;
+    height: 300px;
+  }
+}
+@keyframes scaleDownCircle {
+  from {
+    width: 300px;
+    height: 300px;
+  }
+  to {
+    width: 5px;
+    height: 5px;
   }
 }
