--- a/main.css
+++ b/main.css
@@ -118,6 +118,14 @@ body {
     padding: 20px 0;
   }
 }
+.header .gradient {
+  position: absolute;
+  width: 100%;
+  height: 310px;
+  top: 0px;
+  background: linear-gradient(180deg, rgba(11, 27, 35, 0.8) 0%, rgba(11, 27, 35, 0) 100%);
+  z-index: -1;
+}
 .header .content {
   display: flex;
   flex-direction: column;
@@ -566,11 +574,11 @@ body {
 }
 
 .main {
-  padding: 0 50px;
+  padding: 0 50px 50px;
 }
 @media (max-width: 1024px) {
   .main {
-    padding: 20px 0;
+    padding: 30px;
   }
 }
 .main .slider {
@@ -579,10 +587,20 @@ body {
   justify-content: space-between;
   position: relative;
 }
+@media (max-width: 1024px) {
+  .main .slider {
+    flex-direction: column;
+  }
+}
 .main .slider .frame {
   display: flex;
   flex-direction: column;
   gap: 100px;
+}
+@media (max-width: 1024px) {
+  .main .slider .frame {
+    gap: 30px;
+  }
 }
 .main .slider .frame .text {
   display: flex;
@@ -600,6 +618,12 @@ body {
   color: #ffffff;
   flex-grow: 0;
 }
+@media (max-width: 1024px) {
+  .main .slider .frame .text p:first-child {
+    font-size: 30px;
+    line-height: 35px;
+  }
+}
 .main .slider .frame .text p:last-child {
   font-family: "Raleway";
   font-style: normal;
@@ -609,6 +633,12 @@ body {
   line-height: 47px;
   color: #ffffff;
   flex-grow: 0;
+}
+@media (max-width: 1024px) {
+  .main .slider .frame .text p:last-child {
+    font-size: 15px;
+    line-height: 18px;
+  }
 }
 .main .slider .frame .ripple {
   max-width: 232px;
@@ -621,6 +651,13 @@ body {
   position: relative;
   overflow: hidden;
   cursor: pointer;
+  border: none;
+}
+@media (max-width: 1024px) {
+  .main .slider .frame .ripple {
+    max-width: 100%;
+    width: 100%;
+  }
 }
 .main .slider .frame .ripple:hover span {
   color: var(--brand-color);
@@ -640,10 +677,16 @@ body {
   font-size: 20px;
   font-style: normal;
   font-weight: 500;
-  line-height: normal;
+  line-height: 30px;
   text-transform: uppercase;
   position: relative;
   z-index: 2;
+}
+@media (max-width: 1024px) {
+  .main .slider .frame .ripple span {
+    font-size: 12px;
+    line-height: 18px;
+  }
 }
 .main .slider .frame .ripple::before {
   content: "";
@@ -658,17 +701,22 @@ body {
   transition: 1s ease forwards;
   z-index: 1;
 }
-.main .slider .scroll-bar {
+.main .slider .spin-button {
   display: flex;
   flex-direction: row;
-  position: absolute;
   gap: 20px;
-  position: relative;
+  position: absolute;
   bottom: 0;
   right: 0;
   max-height: 64px;
+  align-items: center;
 }
-.main .slider .scroll-bar p {
+@media (max-width: 1024px) {
+  .main .slider .spin-button {
+    display: none;
+  }
+}
+.main .slider .spin-button p {
   width: 39px;
   height: 29px;
   font-family: "Raleway";
@@ -678,6 +726,34 @@ body {
   line-height: 29px;
   text-transform: uppercase;
   color: #ffffff;
+}
+.main .slider .spin-button .forward,
+.main .slider .spin-button .backward {
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  padding: 20px;
+  gap: 10px;
+  width: 64px;
+  height: 64px;
+  background: rgba(255, 255, 255, 0.2);
+  border: 1px solid rgba(255, 255, 255, 0.2);
+  border-radius: 5px;
+}
+.main .slider .spin-button .forward:before,
+.main .slider .spin-button .backward:before {
+  content: url("data:image/svg+xml,%3Csvg width='24' height='24' viewBox='0 0 24 24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M14.7071 5.29289C15.0976 5.68342 15.0976 6.31658 14.7071 6.70711L9.41421 12L14.7071 17.2929C15.0976 17.6834 15.0976 18.3166 14.7071 18.7071C14.3166 19.0976 13.6834 19.0976 13.2929 18.7071L7.29289 12.7071C6.90237 12.3166 6.90237 11.6834 7.29289 11.2929L13.2929 5.29289C13.6834 4.90237 14.3166 4.90237 14.7071 5.29289Z' fill='white'/%3E%3C/svg%3E%0A");
+}
+.main .slider .spin-button .forward:hover,
+.main .slider .spin-button .backward:hover {
+  background: var(--brand-color);
+  transition: 3s ease forwards;
+  cursor: pointer;
+}
+.main .slider .spin-button .backward:before {
+  content: url("data:image/svg+xml,%3Csvg width='24' height='24' viewBox='0 0 24 24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M9.29289 5.29289C8.90237 5.68342 8.90237 6.31658 9.29289 6.70711L14.5858 12L9.29289 17.2929C8.90237 17.6834 8.90237 18.3166 9.29289 18.7071C9.68342 19.0976 10.3166 19.0976 10.7071 18.7071L16.7071 12.7071C17.0976 12.3166 17.0976 11.6834 16.7071 11.2929L10.7071 5.29289C10.3166 4.90237 9.68342 4.90237 9.29289 5.29289Z' fill='white'/%3E%3C/svg%3E%0A");
 }
 
 @keyframes scaleCircle {
