--- a/main.scss
+++ b/main.scss
@@ -123,6 +123,18 @@ body {
   @media (max-width: 1024px) {
     padding: 20px 0;
   }
+  .gradient {
+    position: absolute;
+    width: 100%;
+    height: 310px;
+    top: 0px;
+    background: linear-gradient(
+      180deg,
+      rgba(11, 27, 35, 0.8) 0%,
+      rgba(11, 27, 35, 0) 100%
+    );
+    z-index: -1;
+  }
   .content {
     display: flex;
     flex-direction: column;
@@ -343,7 +355,7 @@ body {
         display: flex;
         align-items: center;
         justify-content: space-around;
-        width: 100%;       
+        width: 100%;
         li {
           &.dropdown {
             position: relative;
@@ -372,7 +384,7 @@ body {
                 content: none;
               }
               &:hover {
-                color: #f5f7fa;               
+                color: #f5f7fa;
               }
             }
             .submenu {
@@ -398,7 +410,6 @@ body {
                   color: var(--brand-color);
                 }
               }
-              
             }
           }
           a {
@@ -432,7 +443,7 @@ body {
               left: 50%;
               transform: translateX(-50%);
               z-index: 1;
-              transition: .3s ease;
+              transition: 0.3s ease;
             }
           }
         }
@@ -446,7 +457,7 @@ body {
         gap: 10px;
         cursor: pointer;
         display: flex;
-        
+
         .line {
           &:first-child {
             width: 100%;
@@ -464,8 +475,8 @@ body {
           }
         }
         &:hover {
-          .line{
-          background:var(--brand-color);
+          .line {
+            background: var(--brand-color);
           }
         }
       }
@@ -586,19 +597,25 @@ body {
 }
 
 .main {
-  padding: 0 50px;
+  padding: 0 50px 50px;
   @media (max-width: 1024px) {
-    padding: 20px 0;
+    padding: 30px;
   }
   .slider {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     position: relative;
+    @media (max-width: 1024px) {
+      flex-direction: column;
+    }
     .frame {
       display: flex;
       flex-direction: column;
       gap: 100px;
+      @media (max-width: 1024px) {
+        gap: 30px;
+      }
       .text {
         display: flex;
         flex-direction: column;
@@ -614,6 +631,10 @@ body {
             line-height: 94px;
             color: #ffffff;
             flex-grow: 0;
+            @media (max-width: 1024px) {
+              font-size: 30px;
+              line-height: 35px;
+            }
           }
           &:last-child {
             font-family: "Raleway";
@@ -624,6 +645,10 @@ body {
             line-height: 47px;
             color: #ffffff;
             flex-grow: 0;
+            @media (max-width: 1024px) {
+              font-size: 15px;
+              line-height: 18px;
+            }
           }
         }
       }
@@ -638,6 +663,11 @@ body {
         position: relative;
         overflow: hidden;
         cursor: pointer;
+        border: none;
+        @media (max-width: 1024px) {
+          max-width: 100%;
+          width: 100%;
+        }
         &:hover {
           span {
             color: var(--brand-color);
@@ -660,10 +690,14 @@ body {
           font-size: 20px;
           font-style: normal;
           font-weight: 500;
-          line-height: normal;
+          line-height: 30px;
           text-transform: uppercase;
           position: relative;
           z-index: 2;
+          @media (max-width: 1024px) {
+            font-size: 12px;
+            line-height: 18px;
+          }
         }
         &::before {
           content: "";
@@ -680,15 +714,18 @@ body {
         }
       }
     }
-    .scroll-bar {
+    .spin-button {
       display: flex;
       flex-direction: row;
-      position: absolute;
       gap: 20px;
-      position: relative;
+      position: absolute;
       bottom: 0;
       right: 0;
       max-height: 64px;
+      align-items: center;
+      @media (max-width: 1024px) {
+        display: none;
+      }
       p {
         width: 39px;
         height: 29px;
@@ -700,7 +737,37 @@ body {
         text-transform: uppercase;
         color: #ffffff;
       }
+      .forward,
+      .backward {
+        box-sizing: border-box;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        padding: 20px;
+        gap: 10px;
+        width: 64px;
+        height: 64px;
+        background: rgba(255, 255, 255, 0.2);
+        border: 1px solid rgba(255, 255, 255, 0.2);
+        border-radius: 5px;
+        &:before {
+          content: url("data:image/svg+xml,%3Csvg width='24' height='24' viewBox='0 0 24 24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M14.7071 5.29289C15.0976 5.68342 15.0976 6.31658 14.7071 6.70711L9.41421 12L14.7071 17.2929C15.0976 17.6834 15.0976 18.3166 14.7071 18.7071C14.3166 19.0976 13.6834 19.0976 13.2929 18.7071L7.29289 12.7071C6.90237 12.3166 6.90237 11.6834 7.29289 11.2929L13.2929 5.29289C13.6834 4.90237 14.3166 4.90237 14.7071 5.29289Z' fill='white'/%3E%3C/svg%3E%0A");
+        }
+        &:hover {
+          background: var(--brand-color);
+          transition: 3s ease forwards;
+          cursor: pointer;
+        }
+      }
+      // ??
+      .backward {
+        &:before {
+          content: url("data:image/svg+xml,%3Csvg width='24' height='24' viewBox='0 0 24 24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M9.29289 5.29289C8.90237 5.68342 8.90237 6.31658 9.29289 6.70711L14.5858 12L9.29289 17.2929C8.90237 17.6834 8.90237 18.3166 9.29289 18.7071C9.68342 19.0976 10.3166 19.0976 10.7071 18.7071L16.7071 12.7071C17.0976 12.3166 17.0976 11.6834 16.7071 11.2929L10.7071 5.29289C10.3166 4.90237 9.68342 4.90237 9.29289 5.29289Z' fill='white'/%3E%3C/svg%3E%0A");
+        }
+      }
     }
+    
   }
 }
 
